# advent-of-code

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md
notes/: 2019.md  2019_day13_interactive.cpp  2020.md  2020_clean.md  2020_followup.md  2021.md  2022.md  TODO.md  day04_mmx_test.cpp  general_notes.md  numbers.ods
notes/_archive/: 2020.md
notes/algos/: graphs.md
notes/img/: day08.xml
src/: advent2020.cpp  advent2020.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  main.cpp
src/2019/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  intcode.cpp  intcode.h
src/2020/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
src/2021/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp
src/2022/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day25.cpp
src/helpers/: array.h  array_helpers.h  bit.h  bit_helpers.cpp  bit_helpers.h  conv.h  conv_helpers.cpp  conv_helpers.h  hash.h  hash_helpers.cpp  hash_helpers.h  input.h  input_helpers.cpp  input_helpers.h  math.h  num.h  ocr.cpp  ocr.h  parse.h  pow.h  pow_helpers.h  print.cpp  print.h  print_helpers.h  string.h  string_helpers.cpp  string_helpers.h  timer.h  vec2.h  vec3.h  vector_helpers.h
src/setup/: all.h  days.h  factory.cpp  factory.h  input_t.h  output_t.h  result_t.h
